# 29/02/20 - Version 3.1.4   #
* Add ability to upload and classify audio files (no sonogram yet)
* On upload, if file is correct format (eg myfile_YYYYMMDD_hhmmss.mp3) taken datetime will be from filename
* Added training test yourself module.
* Limit S3 transfer to 500.

# 29/02/20 - Version 3.1.3   #
* Optimised chooseMultiple, Single and Repeat db queries so no order by rand()

# 08/02/20 - Version 3.1.3   #
* Chart heights, widths and options to correct display on Edge

# 07/02/20 - Version 3.1.3   #
* Add unknown year for species by year display - these are for sequences with taken = 0

# 05/02/20 - Version 3.1.3   #
* Add tooltips for different map modes

# 04/02/20 - Version 3.1.3   #
* Remove sites from private projects from all discover stats.

# 04/02/20 - Version 3.1.3   #
* Allow small area charts
* Areas can be displayed on top of sites.

# 04/02/20 - Version 3.1.2   #
* Minor mods to improve toggle buttons for site display
* Toggle buttons to hide/show sites

# 03/02/20 - Version 3.1.1   #
* Discover menu item added
* Some basic data vis added: view stats by map area, view species across whole map, view sites across whole map

# Version 3.1.0   #
* Timezones
* Timezone data requested on upload

# 10/10/19 - Version 3.0.0   #
* Multilingual version of MammalWeb
* Location button on Spotter screen

# 17/7/19 - Version 2.6.3   #
* New Add Site multi page form to make adding sites less error-prone
* Projects can request specific data for sites withing them.

# 17/7/19 - Version 2.6.2   #
* Transfer photo and video files to S3 storage based on s3_status column on Photo table (0=transfer)
* Add project logos to startkiosk page

# 8/6/19 - Version 2.6.1 - Commit a87c2ec061201f93263cff7063a65cfd54b62777  #
* Store position of site in latitude and longitude to enable sites to be positioned outside UK, OS grid reference stored in addition for UK
* Stop long press opening context menu for kiosk users
* Add project specific logos