@@ -3,6 +3,7 @@
 * On upload, if file is correct format (eg myfile_YYYYMMDD_hhmmss.mp3) taken datetime will be from filename
 * Added training test yourself module.
 * Limit S3 transfer to 500.
+* Fail if audio file does not have date time in format
 
 # 29/02/20 - Version 3.1.3   #
 * Optimised chooseMultiple, Single and Repeat db queries so no order by rand()
